<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:ems="10"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"
        android:ems="10"
        android:inputType="numberDecimal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"/>
        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/lastCalculatedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastCalcDate"/>
    <TextView
        android:id="@+id/lastCalculatedBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastCalcBMI"/>
    <TextView
        android:id="@+id/bmiCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    </LinearLayout>
</LinearLayout>